<resources>
    <string name="app_name">UBCI SPOC</string>
    <string name="inscription">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="poste">Numéro de poste </string>
    <string name="confirm">Confirmer</string>
    <string name="en_attente">En attente</string>
    <string name="en_cours">Tickets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="options">Options</string>
    <string name="ajouter_photo">Ajouter photo</string>
    <string name="ecrivez_ici_le_sujet">Ecrivez ici le sujet</string>
    <string name="sujet_de_la_reclamation">Sujet de la reclamation :</string>
    <string name="choisir">Choisir</string>
    <string name="ajout_reclamation">Ajouter réclamation</string>
    <string name="local">Local :</string>
    <string name="type">Type :</string>
    <string name="nom_etab">Nom de l\'tablissement :</string>
    <string name="etage">Etage :</string>
    <string name="bureau">Bureau :</string>
    <string name="imb">Immeuble</string>
    <string name="ag">Agence</string>
    <string name="non_selectionn">Non selectionné</string>
    <string name="succes">Succès</string>
    <string name="erreur">Erreur</string>
    <string name="reclamation_succes">Réclamation ajoutée avec succès</string>
    <string name="reclamation_erreur">Erreur lors de l\'ajout de la réclamation</string>



</resources>
